--- a/lists/adlist.ini
+++ b/lists/adlist.ini
@@ -1,4 +1,10 @@
 [Ad-Urls]
-Hagezi = https://raw.githubusercontent.com/hagezi/dns-blocklists/main/wildcard/light-onlydomains.txt
 Adguard = https://adguardteam.github.io/AdGuardSDNSFilter/Filters/filter.txt
 Oisd = https://small.oisd.nl/domainswild2
+
+ABPVN = https://raw.githubusercontent.com/abpvn/abpvn/master/filter/abpvn_noelemhide.txt
+
+# Oisd = https://small.oisd.nl/domainswild2
+# NSFW = https://nsfw.oisd.nl/domainswild2
+
+Hagezi = https://raw.githubusercontent.com/hagezi/dns-blocklists/main/wildcard/light-onlydomains.txt
