--- a/lists/adlist.ini
+++ b/lists/adlist.ini
@@ -7,4 +7,4 @@ ABPVN = https://raw.githubusercontent.com/abpvn/abpvn/master/filter/abpvn_noelem
 # Oisd = https://small.oisd.nl/domainswild2
 # NSFW = https://nsfw.oisd.nl/domainswild2
 
-Hagezi = https://raw.githubusercontent.com/hagezi/dns-blocklists/main/wildcard/light-onlydomains.txt
+# Hagezi = https://raw.githubusercontent.com/hagezi/dns-blocklists/main/wildcard/light-onlydomains.txt
