--- a/lists/adlist.ini
+++ b/lists/adlist.ini
@@ -2,7 +2,7 @@
 Adguard = https://adguardteam.github.io/AdGuardSDNSFilter/Filters/filter.txt
 Oisd = https://small.oisd.nl/domainswild2
 
-ABPVN = https://raw.githubusercontent.com/abpvn/abpvn/master/filter/abpvn_noelemhide.txt
+# ABPVN = https://raw.githubusercontent.com/abpvn/abpvn/master/filter/abpvn_noelemhide.txt
 
 # Oisd = https://small.oisd.nl/domainswild2
 # NSFW = https://nsfw.oisd.nl/domainswild2
