--- a/lists/adlist.ini
+++ b/lists/adlist.ini
@@ -2,6 +2,10 @@
 Adguard = https://adguardteam.github.io/AdGuardSDNSFilter/Filters/filter.txt
 Oisd = https://small.oisd.nl/domainswild2
 
+[VN-Urls]
+https://abpvn.com/android/abpvn.txt
+https://raw.githubusercontent.com/elliotwutingfeng/ChongLuaDao-Phishing-Blocklist/main/urls.txt
+
 # ABPVN = https://raw.githubusercontent.com/abpvn/abpvn/master/filter/abpvn_noelemhide.txt
 
 # Oisd = https://small.oisd.nl/domainswild2
